testdata/invalid/invalid_bitflags_unparseable_uint_rhs.bop
[flags]
enum Flags : uint16 {
    A = (0 & -1);
}